--- a/config/config.conf
+++ b/config/config.conf
@@ -31,37 +31,12 @@
       "domain": ""
     }
   },
-  "seo_rules": {
-    "book_index": {
-      "title": "{articlename}目录_{articlename}最新章节_{author}_{sitename}",
-      "keywords": "{articlename}目录,{articlename}最新章节",
-      "description": "{sitename}为书友提供{articlename}全部章节目录，方便您快速定位阅读。"
-    },
-    "book_info": {
-      "title": "{articlename}全本阅读_{articlename}最新章节_{author}_{sitename}",
-      "keywords": "{articlename},{articlename}最新章节,{articlename}无弹窗",
-      "description": "{articlename}是{author}的一部优秀的{sortname}小说，{sitename}提供{articlename}最新章节全文阅读。"
-    },
-    "book_reader": {
-      "title": "{chaptername}_{articlename}_{sitename}",
-      "keywords": "{chaptername},{articlename}最新章节",
-      "description": "{articlename}的{chaptername}章节阅读内容由{sitename}网友上传。"
-    },
-    "index": {
-      "title": "{sitename}_书友最值得收藏的网络小说阅读网",
-      "keywords": "{sitename},小说网,最新章节免费阅读",
-      "description": "{sitename}提供各类热门网络小说最新章节免费阅读，是书友长期收藏的小说网。"
-    },
-    "sort": {
-      "title": "{sortname}_第{page}页_{sitename}",
-      "keywords": "{sortname},{sortname}小说",
-      "description": "{sitename}为您提供丰富的{sortname}小说列表，当前是第{page}页。"
-    },
-    "top": {
-      "title": "小说排行榜_{sitename}",
-      "keywords": "小说排行榜,热门小说排行,经典小说推荐",
-      "description": "{sitename}为您提供最权威的小说排行榜，包括总点击榜、月点击榜、推荐榜等多个维度。"
-    }
-  },
-  "analytics": "\u003cscript\u003econsole.log('Analytics Test');\u003c/script\u003e"
+  "analytics": "\u003cscript\u003econsole.log('Analytics Test');\u003c/script\u003e",
+  "redis": {
+    "enabled": false,
+    "host": "172.16.15.128",
+    "port": 6379,
+    "password": "",
+    "db": 0
+  }
 }
