--- a/config/config.conf
+++ b/config/config.conf
@@ -5,7 +5,10 @@
     "port": 3306,
     "user": "test",
     "password": "test123",
-    "dbname": "test"
+    "dbname": "test",
+    "max_open_conns": 50,
+    "max_idle_conns": 25,
+    "conn_max_lifetime": 300
   },
   "server": {
     "host": "localhost",
@@ -16,7 +19,14 @@
     "domain": "www.ccbook.org",
     "template": "html",
     "admin_path": "/admin",
-    "search_limit": 30
+    "search_limit": 30,
+    "index_cache": false,
+    "book_cache": false,
+    "book_index_cache": false,
+    "read_cache": false,
+    "sort_cache": false,
+    "top_cache": false,
+    "gzip_enabled": true
   },
   "storage": {
     "type": "local",
@@ -33,7 +43,7 @@
   },
   "analytics": "\u003cscript\u003econsole.log('Analytics Test');\u003c/script\u003e",
   "redis": {
-    "enabled": false,
+    "enabled": true,
     "host": "172.16.15.128",
     "port": 6379,
     "password": "",
