--- a/config/plugins.conf
+++ b/config/plugins.conf
@@ -1,4 +1,19 @@
 {
+  "ads": {
+    "enabled": true,
+    "slots": {
+      "test1": {
+        "content": "\u003cscript\u003econsole.log('Analytics Test');\u003c/script\u003e",
+        "enabled": true,
+        "name": "测试"
+      },
+      "test2": {
+        "content": "",
+        "enabled": true,
+        "name": "测试"
+      }
+    }
+  },
   "langtail": {
     "cache_seconds": 3600,
     "enabled": true,
