--- a/config/config.conf
+++ b/config/config.conf
@@ -7,8 +7,8 @@
     "password": "test123",
     "dbname": "test",
     "max_open_conns": 50,
-    "max_idle_conns": 25,
-    "conn_max_lifetime": 300
+    "max_idle_conns": 10,
+    "conn_max_lifetime": 60
   },
   "server": {
     "host": "localhost",
@@ -26,7 +26,7 @@
     "read_cache": false,
     "sort_cache": false,
     "top_cache": false,
-    "gzip_enabled": true
+    "gzip_enabled": false
   },
   "storage": {
     "type": "local",
