--- a/config/plugins.conf
+++ b/config/plugins.conf
@@ -14,6 +14,9 @@
       }
     }
   },
+  "db_optimizer": {
+    "enabled": true
+  },
   "langtail": {
     "cache_seconds": 3600,
     "enabled": true,
