--- a/config/config.conf
+++ b/config/config.conf
@@ -16,7 +16,7 @@
   },
   "site": {
     "sitename": "虫虫书吧",
-    "domain": "www.ccbook.org",
+    "domain": "localhost:8080",
     "template": "html",
     "admin_path": "/admin",
     "search_limit": 30,
@@ -26,6 +26,8 @@
     "read_cache": false,
     "sort_cache": false,
     "top_cache": false,
+    "force_domain": true,
+    "id_trans_rule": "",
     "gzip_enabled": false
   },
   "storage": {
@@ -43,7 +45,7 @@
   },
   "analytics": "\u003cscript\u003econsole.log('Analytics Test');\u003c/script\u003e",
   "redis": {
-    "enabled": true,
+    "enabled": false,
     "host": "172.16.15.128",
     "port": 6379,
     "password": "",
