--- a/config/router.conf
+++ b/config/router.conf
@@ -11,11 +11,11 @@
     "index": "/",
     "login": "/login",
     "logout": "/logout",
-    "read": "/book/:aid/:cid/",
+    "read": "/book/:aid/:cid.html",
     "register": "/regist",
     "search": "/search",
     "sort": "/sort/:sid/:page/",
-    "top": "/top.html",
+    "top": "/tops.html",
     "user_center": "/user",
     "user_update": "/user/update"
   }
