--- a/config/config.conf
+++ b/config/config.conf
@@ -17,7 +17,9 @@
   "site": {
     "sitename": "虫虫书吧",
     "domain": "localhost:8080",
+    "mobile_domain": "",
     "template": "html",
+    "mobile_template": "html2",
     "admin_path": "/admin",
     "search_limit": 30,
     "index_cache": false,
