--- a/config/plugins.conf
+++ b/config/plugins.conf
@@ -22,5 +22,15 @@
     "enabled": true,
     "fetch_cycle_days": 7,
     "route_pattern": "/books/:lid"
+  },
+  "sitemap": {
+    "enabled": true,
+    "output_path": "static/sitemap",
+    "regenerate_hours": 24,
+    "max_urls_per_file": 50000,
+    "include_books": true,
+    "include_chapters": false,
+    "changefreq": "daily",
+    "priority": 0.8
   }
 }
