--- a/config/config.conf
+++ b/config/config.conf
@@ -18,8 +18,8 @@
     "sitename": "虫虫书吧",
     "domain": "localhost:8080",
     "mobile_domain": "",
-    "template": "html",
-    "mobile_template": "html2",
+    "template": "html2",
+    "mobile_template": "",
     "admin_path": "/admin",
     "search_limit": 30,
     "index_cache": false,
