--- a/config/config.conf
+++ b/config/config.conf
@@ -18,7 +18,7 @@
     "sitename": "虫虫书吧",
     "domain": "localhost:8080",
     "mobile_domain": "",
-    "template": "html2",
+    "template": "wap",
     "mobile_template": "",
     "admin_path": "/admin",
     "search_limit": 30,
