--- a/config/router.conf
+++ b/config/router.conf
@@ -2,6 +2,7 @@
   "routes": {
     "book": "/book_:aid.html",
     "book_index": "/index_:aid.html",
+    "book_index_page": "/index_:aid_:page.html",
     "bookcase_add": "/bookcase/add",
     "bookcase_delete": "/bookcase/delete",
     "bookcase_list": "/bookcase/list",
