--- a/config/config.conf
+++ b/config/config.conf
@@ -16,10 +16,10 @@
   },
   "site": {
     "sitename": "虫虫书吧",
-    "domain": "localhost:8080",
-    "mobile_domain": "",
-    "template": "wap",
-    "mobile_template": "",
+    "domain": "www.test.com:8080",
+    "mobile_domain": "m.test.com:8080",
+    "template": "html2",
+    "mobile_template": "wap",
     "admin_path": "/admin",
     "search_limit": 30,
     "index_cache": false,
@@ -52,5 +52,13 @@
     "port": 6379,
     "password": "",
     "db": 0
+  },
+  "log": {
+    "level": "info",
+    "output": "stdout",
+    "file_path": "logs/app.log",
+    "enable_http": true,
+    "max_size": 100,
+    "max_age": 3
   }
 }
