--- a/config/config.conf
+++ b/config/config.conf
@@ -60,5 +60,17 @@
     "enable_http": true,
     "max_size": 100,
     "max_age": 3
+  },
+  "recommend": {
+    "top": {
+      "sort": "monthvisit",
+      "limit": 6,
+      "picks": "1"
+    },
+    "hot": {
+      "sort": "allvisit",
+      "limit": 12,
+      "picks": ""
+    }
   }
 }
