--- a/config/plugins.conf
+++ b/config/plugins.conf
@@ -21,16 +21,17 @@
     "cache_seconds": 3600,
     "enabled": true,
     "fetch_cycle_days": 7,
-    "route_pattern": "/books/:lid"
+    "route_pattern": "/books/:lid",
+    "show_count": 20
   },
   "sitemap": {
+    "changefreq": "daily",
     "enabled": true,
-    "output_path": "static/sitemap",
-    "regenerate_hours": 24,
-    "max_urls_per_file": 50000,
     "include_books": true,
     "include_chapters": false,
-    "changefreq": "daily",
-    "priority": 0.8
+    "max_urls_per_file": 50000,
+    "output_path": "static/sitemap",
+    "priority": 0.8,
+    "regenerate_hours": 24
   }
 }
